src/test/resources/bad/provided/033-assign-to-self.lat
class A {
    int a;

    void foo() {
        self = new A;
    }
}

int main () {
    return 0;
}
